--- a/form.html
+++ b/form.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <title>Form Validation</title>
     <link rel="stylesheet" href="style.css">
+    <!-- I had to add this file sent from rebecca -->
+    <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta24/shoelace.css">
   </head>
   <body>
     <!-- The difference ID vs CLASS id can be used to identify only one element and class can be used to identify a full class of elements -->
     <div class="container">
       <h1>Pre-paid Parking Form</h1>
+      <!-- We want to put event listener on form -->
       <form id="parking-form">
         <div class="input-field" id="name-field">
           <label for="name">Name</label>
