--- a/variablesandtypes.html
+++ b/variablesandtypes.html
@@ -6,14 +6,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="domManipulationPractice.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
-        <!-- adding a button  -->
-        <h1 class= "title">DOM PRACTICE!</h1>
-        <button class="changeColor">Click Me</button>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
         
-        
-        <script src="domManipulationPractice.js" async defer></script>
+        <script src="" async defer></script>
     </body>
 </html>
